--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@
 
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
-
 }
 
 .nav-bar {
@@ -74,7 +71,7 @@
 }
 
 /* Video styles*/
-.video-container {
+/* .video-container {
 
     flex: 1;
     display: flex;
@@ -90,7 +87,7 @@
 
     width: 100%;
     height: auto;
-}
+} */
 
 @media(max-width: 1200px){
     .nav_bar_menu{
